--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginStart="20dp"
-    android:background="@drawable/background_wall">
+    android:layout_marginEnd="20dp">
 
     <TextView
         android:id="@+id/header"
@@ -21,7 +20,6 @@
         android:id="@+id/coin_1_holder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
         android:gravity="center_vertical"
         app:layout_constraintTop_toBottomOf="@id/header">
 
@@ -58,7 +56,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
         android:gravity="center_vertical"
         app:layout_constraintTop_toBottomOf="@id/coin_1_holder">
 
@@ -95,7 +92,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
         android:gravity="center_vertical"
         app:layout_constraintTop_toBottomOf="@id/coin_2_holder">
 
@@ -126,49 +122,5 @@
             android:layout_marginStart="5dp"
             android:background="@drawable/share_icon" />
     </RelativeLayout>
-
-    <RadioGroup
-        android:id="@+id/radio_group"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="@+id/coin_3_holder"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/coin_2_holder"
-        app:layout_constraintTop_toTopOf="@+id/coin_1_holder">
-
-        <RadioButton
-            android:id="@+id/radioButton_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <RadioButton
-            android:id="@+id/radioButton_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp" />
-
-        <RadioButton
-            android:id="@+id/radioButton_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp" />
-
-    </RadioGroup>
-
-    <Button
-        android:id="@+id/pay_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        android:text="PAY"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
 
 </android.support.constraint.ConstraintLayout>
