--- a/app/src/main/res/layout/activity_nfc_first_pay.xml
+++ b/app/src/main/res/layout/activity_nfc_first_pay.xml
@@ -65,4 +65,14 @@
             app:layout_constraintStart_toStartOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="-300dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/background_wall"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
