--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_wall"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/hello_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="25dp"
         android:gravity="center"
         android:text="Hello, \nWallet Users"
         android:textSize="20dp"
@@ -20,9 +21,10 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/authenticate_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="25dp"
         android:gravity="center"
         android:text="Authenticate via Gemalto KYC / Civic"
         android:textSize="20dp"
@@ -30,6 +32,35 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/hello_id"
         tools:layout_editor_absoluteX="0dp" />
+
+    <EditText
+        android:id="@+id/enter_pin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
+        android:gravity="center"
+        android:hint="SET YOUR SECRET KEY"
+        android:inputType="numberPassword"
+        android:maxLength="4"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@id/authenticate_text" />
+
+    <EditText
+        android:id="@+id/enter_pin_two"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="30dp"
+        android:gravity="center"
+        android:hint="CONFIRM YOUR SECRET KEY"
+        android:inputType="numberPassword"
+        android:maxLength="4"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/enter_pin" />
+
 
     <Button
         android:id="@+id/register_button"
