--- a/app/src/main/res/layout/activity_wallet_setup.xml
+++ b/app/src/main/res/layout/activity_wallet_setup.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background_wall">
 
     <TextView
         android:id="@+id/textView"
@@ -24,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/text_view_border"
         android:gravity="center"
@@ -33,20 +34,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <EditText
-        android:id="@+id/enter_pin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
-        android:gravity="center"
-        android:hint="ENTER YOUR SECRET KEY"
-        android:inputType="numberPassword"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/pass_phrase" />
-
 
     <RelativeLayout
         android:layout_width="match_parent"
