--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -155,13 +155,14 @@
         <RadioButton
             android:id="@+id/radioButton_1"
             android:layout_width="wrap_content"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content" />
 
         <RadioButton
             android:id="@+id/radioButton_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp" />
+            android:layout_marginTop="40dp" />
 
         <RadioButton
             android:id="@+id/radioButton_3"
