--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -203,7 +203,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:gravity="center"
-        android:hint="Enter Amount To Pay(XRP)"
+        android:hint="Enter Quantity To Pay(XRP)"
         android:inputType="numberDecimal"
         android:text=""
         app:layout_constraintEnd_toEndOf="parent"
