--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -58,7 +58,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/address_1"
             android:layout_alignStart="@id/address_1"
-            android:textSize="15sp"
+            android:textSize="20sp"
+            android:text="XRP: "
             android:textStyle="bold"
             android:visibility="gone" />
     </RelativeLayout>
@@ -155,8 +156,8 @@
         <RadioButton
             android:id="@+id/radioButton_1"
             android:layout_width="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp" />
 
         <RadioButton
             android:id="@+id/radioButton_2"
@@ -180,7 +181,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="65dp"
         android:hint="Destination Address"
-        android:minLines="2"
+        android:lines="2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/coin_3_holder" />
@@ -209,6 +210,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dest_add" />
+
+    <Button
+        android:id="@+id/refresh"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/refresh_icon"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/pay_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/pay_button"
+        app:layout_constraintTop_toTopOf="@+id/pay_button"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/pay_button"
